--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 	</head>
 	<body>
 		<p>This is Simone's branch!</p>
+		<div>REGISTER  WINDOWS</div>
+		<div> LOGIN  WINDOWS</div>
 	</body>
 </html>
